website/versioned_docs/version-2.0.0-alpha.11/react-native.containerstorage.md
---
id: version-2.0.0-alpha.11-react-native.containerstorage
title: ContainerStorage interface
hide_title: true
original_id: react-native.containerstorage
---
<!-- Do not edit this file. It is automatically generated by API Documenter. -->


## ContainerStorage interface


<b>Signature:</b>

```typescript
export declare interface ContainerStorage 
```

## Methods

|  Method | Description |
|  --- | --- |
|  [delAccessToken(namespace)](./react-native.containerstorage.delaccesstoken.md) |  |
|  [delIdentity(namespace)](./react-native.containerstorage.delidentity.md) |  |
|  [delOAuthRedirectAction(namespace)](./react-native.containerstorage.deloauthredirectaction.md) |  |
|  [delRefreshToken(namespace)](./react-native.containerstorage.delrefreshtoken.md) |  |
|  [delSessionID(namespace)](./react-native.containerstorage.delsessionid.md) |  |
|  [delUser(namespace)](./react-native.containerstorage.deluser.md) |  |
|  [getAccessToken(namespace)](./react-native.containerstorage.getaccesstoken.md) |  |
|  [getExtraSessionInfoOptions(namespace)](./react-native.containerstorage.getextrasessioninfooptions.md) |  |
|  [getIdentity(namespace)](./react-native.containerstorage.getidentity.md) |  |
|  [getOAuthRedirectAction(namespace)](./react-native.containerstorage.getoauthredirectaction.md) |  |
|  [getRefreshToken(namespace)](./react-native.containerstorage.getrefreshtoken.md) |  |
|  [getSessionID(namespace)](./react-native.containerstorage.getsessionid.md) |  |
|  [getUser(namespace)](./react-native.containerstorage.getuser.md) |  |
|  [setAccessToken(namespace, accessToken)](./react-native.containerstorage.setaccesstoken.md) |  |
|  [setExtraSessionInfoOptions(namespace, options)](./react-native.containerstorage.setextrasessioninfooptions.md) |  |
|  [setIdentity(namespace, identity)](./react-native.containerstorage.setidentity.md) |  |
|  [setOAuthRedirectAction(namespace, oauthRedirectAction)](./react-native.containerstorage.setoauthredirectaction.md) |  |
|  [setRefreshToken(namespace, refreshToken)](./react-native.containerstorage.setrefreshtoken.md) |  |
|  [setSessionID(namespace, sessionID)](./react-native.containerstorage.setsessionid.md) |  |
|  [setUser(namespace, user)](./react-native.containerstorage.setuser.md) |  |

